--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -82,7 +82,7 @@
         </div>
       </li>
       <li>
-        <div (click)="OnSubmit()" mat-card-avatar class="example-header-image">
+        <div (click)="OnSubmit('')" mat-card-avatar class="example-header-image">
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 493.6 493.6" style="enable-background:new 0 0 493.6 493.6;" xml:space="preserve">
             <path style="fill:#edabff;" d="M397.6,135.6c-3.2,2.4-8,2.4-11.2-0.8c-0.8-0.8-1.6-1.6-1.6-3.2c-1.6-4-0.8-8,3.2-10.4L442.4,82  L31.2,186l139.2,91.2l136.8-98.4c1.6-0.8,3.2-1.6,4.8-1.6c2.4,0,4.8,0.8,6.4,2.4l0,0c4,4,3.2,10.4-0.8,13.6l-134.4,96L288,415.6  l171.2-324L397.6,135.6z M372,154l-28.8,20.8c-3.2,2.4-8,2.4-11.2-0.8l0,0c-0.8-0.8-1.6-1.6-1.6-3.2c-1.6-4-0.8-8,3.2-10.4  l28.8-20.8c1.6-0.8,3.2-1.6,4.8-1.6c2.4,0,4.8,0.8,6.4,2.4l0,0C376.8,144.4,376,150.8,372,154z"/>
             <polygon style="fill:#E4C6A1;" points="175.2,306.8 214.4,354 157.6,378.8 "/>
