--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card" [routerLink]="[ news.newsId ]">
+<mat-card class="example-card" (click)="navigate()">
     <mat-card-header style="display: flex;">
       <button #miButton (mouseover)="over()" class="butto ripple button-outline" (click)="onClick('/allusers/'+ news.newsOwner, news.newsOwnerId);$event.stopPropagation();$event.preventDefault()"
       style="float: right; border: none;display: flex;padding: revert;">
